feat(fix): Use List.toList() and centralize doctor error
Co-Authored-By: Dinithi Perera <it22642882@my.sliit.lk>
Co-Authored-By: Isara Ekanayake <179592272+IsaraSE@users.noreply.github.com>
Co-Authored-By: Tursh Olivea <165576182+OliveaSegaram@users.noreply.github.com>